Cargue de reestructuraciones en docker y swagger
